--- a/index.html
+++ b/index.html
@@ -3,15 +3,185 @@
 <head>
   <meta charset="UTF-8">
   <title>Generador SCR</title>
-  <!-- Estilos y contenido omitidos por brevedad -->
+  <style>
+    body {
+      font-family: Courier, monospace;
+      background-color: #a10000;
+      padding: 2rem;
+      margin: 0;
+    }
+    .container {
+      max-width: 700px;
+      background: white;
+      padding: 2rem;
+      margin: auto;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    }
+    h1 {
+      text-align: center;
+      font-size: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+    label {
+      display: block;
+      margin-top: 1rem;
+      font-weight: bold;
+    }
+    input, select {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 0.3rem;
+    }
+    input[type="date"] {
+      width: 50%;
+    }
+    textarea {
+      width: 100%;
+      height: 250px;
+      font-family: Courier, monospace;
+      margin-top: 1rem;
+      white-space: pre;
+      text-transform: uppercase;
+    }
+    button {
+      background-color: #007acc;
+      color: white;
+      border: none;
+      padding: 0.7rem 1.5rem;
+      margin-top: 1.5rem;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+    button:hover {
+      background-color: #005fa3;
+    }
+    .logo {
+      display: block;
+      margin: 0 auto 1rem auto;
+      max-width: 100%;
+    }
+    .firma {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #333;
+      margin-top: 2rem;
+    }
+    .confirmacion {
+      text-align: center;
+      font-size: 1rem;
+      color: green;
+      margin-top: 1rem;
+      display: none;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
   <img src="Logo-Iberia-Express.jpg" alt="Logo Iberia Express" class="logo">
+  
   <h1>Generador SCR</h1>
+
+  <label for="accion">Tipo de solicitud:</label>
+  <select id="accion">
+    <option value="N">Solicitud de Slot</option>
+    <option value="D">Cancelación de Slot</option>
+  </select>
+
+  <label for="fecha">Fecha del vuelo:</label>
+  <input type="date" id="fecha" value="">
+
+  <label for="hora">Hora UTC (Ej: 2200):</label>
+  <input type="text" id="hora">
+
+  <label for="origen">Aeropuerto origen (Ej: MAD):</label>
+  <input type="text" id="origen">
+
+  <label for="destino">Aeropuerto destino (Ej: ALC):</label>
+  <input type="text" id="destino">
+
+  <label for="avion">Tipo de avión:</label>
+  <select id="avion">
+    <option value="180320">A320 / 180 asientos</option>
+    <option value="232321">A321 / 232 asientos</option>
+  </select>
+
+  <label for="tipoVuelo">Tipo de vuelo:</label>
+  <select id="tipoVuelo">
+    <option value="J">Vuelo Regular</option>
+    <option value="P">Vuelo Posicional</option>
+  </select>
+
+  <div id="vuelos-container">
+    <div class="vuelo-block">
+      <label for="vuelo">Número de vuelo (Ej: 1212 o IBS1212):</label>
+      <input type="text" class="vuelo">
+    </div>
+  </div>
+
+  <button type="button" onclick="agregarVuelo()">+ Añadir otro vuelo</button>
+  <button onclick="generarSCR()">Generar SCR</button>
+  <button onclick="copiarSCR()">Copiar SCR</button>
+
+  <textarea id="resultado" readonly></textarea>
+  <div class="confirmacion" id="confirmacionMsg">✅ SCR generado correctamente.</div>
+  <div class="firma">POR R.GARDE<br>para IBS.</div>
 </div>
+
 <script>
-// Lógica JS del generador SCR omitida por brevedad
+function agregarVuelo() {
+  const container = document.getElementById("vuelos-container");
+  const block = document.createElement("div");
+  block.className = "vuelo-block";
+  block.innerHTML = '<label for="vuelo">Número de vuelo:</label><input type="text" class="vuelo">';
+  container.appendChild(block);
+}
+
+function generarSCR() {
+  const accion = document.getElementById("accion").value.toUpperCase();
+  const vuelos = Array.from(document.getElementsByClassName("vuelo"))
+    .map(v => v.value.toUpperCase().trim())
+    .filter(v => v);
+
+  const fecha = document.getElementById("fecha").valueAsDate;
+  const hora = document.getElementById("hora").value.toUpperCase().trim();
+  const origen = document.getElementById("origen").value.toUpperCase().trim();
+  const destino = document.getElementById("destino").value.toUpperCase().trim();
+  const avion = document.getElementById("avion").value;
+  const tipoVuelo = document.getElementById("tipoVuelo").value.toUpperCase();
+  const temporada = "S25";
+  const asientos = avion.substring(0, 3);
+  const tipoAvion = avion.substring(3);
+
+  const fechaStr = fecha ? fecha.toLocaleDateString("es-ES", { day: '2-digit', month: 'short' }).toUpperCase().replace('.', '') : "";
+
+  let scr = `SCR\n${temporada}\n${fechaStr}\n${origen}`;
+  for (let vuelo of vuelos) {
+    if (!vuelo.startsWith("IBS")) vuelo = "IBS" + vuelo;
+    else vuelo = vuelo.replace(" ", "");
+    scr += `\n${accion} ${vuelo} ${fechaStr} ${asientos}${tipoAvion} ${destino}${hora} ${tipoVuelo === 'P' ? 'P' : 'J'}`;
+  }
+  scr += `\nSI ${tipoVuelo === 'P' ? 'POS' : 'OPER'}\nGI SALUDOS`;
+  document.getElementById("resultado").value = scr.toUpperCase();
+
+  const confirmMsg = document.getElementById("confirmacionMsg");
+  confirmMsg.style.display = "block";
+  setTimeout(() => confirmMsg.style.display = "none", 3000);
+}
+
+function copiarSCR() {
+  const textArea = document.getElementById("resultado");
+  textArea.select();
+  textArea.setSelectionRange(0, 99999);
+  document.execCommand("copy");
+  alert("SCR copiado al portapapeles");
+}
+
+window.onload = () => {
+  const today = new Date();
+  const formatted = today.toISOString().split("T")[0];
+  document.getElementById("fecha").value = formatted;
+};
 </script>
 </body>
 </html>
